--- a/Seodery/src/main/webapp/resources/script/jquery/index.html
+++ b/Seodery/src/main/webapp/resources/script/jquery/index.html
@@ -36,8 +36,9 @@
 <li><a href="https://www.jqueryscript.net/other/star-rating-fxss.html">Download This Plugin</a></li>
 <li><a href="https://www.jqueryscript.net/">Back To jQueryScript.Net</a></li>
 </ul>
-<div class="jquery-script-ads"><script type="text/javascript"><!--
-google_ad_client = "ca-pub-2783044520727903";
+<div class="jquery-script-ads">
+<script type="text/javascript">
+<!--google_ad_client = "ca-pub-2783044520727903";
 /* jQuery_demo */
 google_ad_slot = "2780937993";
 google_ad_width = 728;
